      (Fixes: #580).

  [ Mike DePaulo ]
  * New upstream release (4.0.3.0):
    - Make X2Go Client aware of the Cinnamon (CINNAMON) desktop environment.
      (Fixes: #571)
    - Make X2Go Client aware of the Trinity (TRINITY) desktop environment.
      (Fixes: #609)
    - Make X2Go Client aware of the Openbox (OPENBOX) window manager.
      (Fixes: #607)
    - Windows: Fix not being able to add the server to the known_hosts file when
      the username has non-English characters. (Fixes: #566)
      (NOTE: This fix only works when the non-English characters are in the same
      language as the Windows "system locale" AKA "Language for non-Unicode
      programs." Bug #611 was written for fixing the issue for languages other
      than the system locale.)
    - Windows: Install VcXsrv "misc" fonts by default, and make all 4 font
      groups optional: misc, 75dpi, 100dpi and others (Fixes: #108)
      Note: The fact that all the fonts are included makes the installer about
      30MB larger.
    - Windows: Bundle new version of VcXsrv: 1.15.2.0-xp+vc2013+x2go1
      This new version is based on upstream VcXsrv 1.15.2.0, but still
      compatible with Windows XP. It is compiled with Microsoft Visual C++ 2013
      and contains 1 X2Go-specific change, winmultiwindow.patch. This patch
      fixes an issue when resizing the NX-proxy window on specific multiple
      monitor setups. (Thanks Oleksandr Shneyder for the patch)
      (Fixes: #568) (Fixes: #594)
    - Windows: Port from MinGW 4.4 + Qt 4.8.5 to MinGW 4.8.2 + Qt 4.8.6,
      including fix for QTBUG-38706 (Fixes: #474, #603)
    - Windows: Fix missing VcXsrv/zlib1.dll . The impact of this bug was that
      VcXsrv would not start if the cwd was changed from the x2goclient
      directory. (The start menu and desktop shortcuts do have the x2goclient
      directory as the cwd. So they were not affected.) (Fixes: #587)
    - Windows: Make the desktop shortcut optional during install,