@@ -360,6 +360,7 @@ void SessionButton::redraw()
     cmdBox->addItem ( "CINNAMON" );
     cmdBox->addItem ( "TRINITY" );
     cmdBox->addItem ( "OPENBOX" );
+    cmdBox->addItem ( "ICEWM" );
     cmdBox->addItem ( tr ( "RDP connection" ) );
     cmdBox->addItem ( tr ( "XDMCP" ) );
     cmdBox->addItem ( tr ( "Connection to local desktop" ) );
@@ -413,6 +414,11 @@ void SessionButton::redraw()
     {
         cmdpix.load ( par->iconsPath ( "/16x16/openbox.png" ) );
         cmdBox->setCurrentIndex ( OPENBOX );
+    }
+    else if ( command == "ICEWM" )
+    {
+        cmdpix.load ( par->iconsPath ( "/16x16/icewm.png" ) );
+        cmdBox->setCurrentIndex ( ICEWM );
     }
     else if ( command =="SHADOW" )
     {
@@ -737,6 +743,11 @@ void SessionButton::slot_cmd_change ( const QString& command )
     {
         newRootless=false;
         pix.load ( par->iconsPath ( "/16x16/openbox.png" ) );
+    }
+    else if ( command == "ICEWM" )
+    {
+        newRootless=false;
+        pix.load ( par->iconsPath ( "/16x16/icewm.png" ) );
     }
     else if ( command ==tr ( "Connection to local desktop" ) )
     {
